[package]
authors = ["Tim McNamara <tim@mcnamara.nz>"]
edition = "2021"
name = "hello_actix"
version = "0.1.0"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
base64 = "0.22"
chrono = "0.4.38"
fastrand = "2.1.1"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
ring = "0.17"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.204", features = ["derive"] }
